Bug #40095
[CLI]rbd: get positional argument error when using --image
Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:
0%
Source:
Tags:
Backport:
nautilus,mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Description
$ rbd image-meta set --image test1 rbd_cache false rbd: metadata value was not specified
Related issues
History
#1 Updated by Mykola Golub almost 2 years ago
- Status changed from New to Fix Under Review
- Pull request ID set to 28313
#2 Updated by Mykola Golub almost 2 years ago
- Backport set to nautilus,mimic,luminous
#3 Updated by Jason Dillaman almost 2 years ago
- Status changed from Fix Under Review to Pending Backport
#4 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #40233: luminous: [CLI]rbd: get positional argument error when using --image added
#5 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #40234: mimic: [CLI]rbd: get positional argument error when using --image added
#6 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #40235: nautilus: [CLI]rbd: get positional argument error when using --image added
#7 Updated by Nathan Cutler over 1 year ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".