rbd/action: fix error getting positional argument

Fixes: http://tracker.ceph.com/issues/40095

Signed-off-by: songweibin <song.weibin@zte.com.cn>
(cherry picked from commit 32a044b0911aef248aec4f6dda6171693b7c9280)

Conflicts:
	src/tools/rbd/action/Config.cc: DNE in Luminous