src/tools/rbd/action/ImageMeta.cc
@@ -256,7 +256,7 @@ int execute_set(const po::variables_map &vm,
     return r;
   }
 
-  std::string value = utils::get_positional_argument(vm, 2);
+  std::string value = utils::get_positional_argument(vm, arg_index);
   if (value.empty()) {
     std::cerr << "rbd: metadata value was not specified" << std::endl;
     return -EINVAL;
